--- a/portfolioSolange.html
+++ b/portfolioSolange.html
@@ -26,9 +26,9 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="About Me.html">About Me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="About Us.html">About Us</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Contact us</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -44,7 +44,7 @@
     <div id="page">
         <article>
             <figure>
-                <img src="images/solange.jpg" alt="Picture of Solange" height="280" width="280">
+                <img src="images/solange.jpg" alt="Picture of Solange" height="250" width="250">
                 <figcaption>Information Architect & Student at SUU</figcaption>
             </figure>
             <h2>About Me</h2>
