--- a/Contact Us.html
+++ b/Contact Us.html
@@ -25,6 +25,8 @@
 					<a href="computers.html">Shop</a>
 					<a href="about.html">About Us</a>
 					<a href="Contact Us.html">Contact Us</a>
+                    <a href="portfolioOscar.html">Team</a>
+
 				</div>
 			</nav>
 
@@ -51,7 +53,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="portfolioHayden">Hayden</a></li>
                             <li><a href="portfolioSolange">Solange</a></li>
-                            <li><a href="portfolioOscar">Oscar</a></li>
+                            <li><a href="portfolioOscar.html">Oscar</a></li>
                         </ul>
 				    </li>
 			</nav>
