--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,8 @@
 						<a href="computers.html">Shop</a>
 						<a href="about.html">About us</a>
 						<a href="Contact Us.html">Contact Us</a>
+						<a href="portfolioOscar.html">Team</a>
+
 					</div>
 					<a class="menu-icon" onclick="hamburger()">
 						<div>&#9776;</div>
@@ -47,7 +49,7 @@
 							<ul class="dropdown-menu">
 								<li><a href="portfolioHayden">Hayden</a></li>
 								<li><a href="portfolioSolange">Solange</a></li>
-								<li><a href="portfolioOscar">Oscar</a></li>
+								<li><a href="portfolioOscar.html">Oscar</a></li>
 							</ul>
 						</li>
 				</nav>
