--- a/Tablet.html
+++ b/Tablet.html
@@ -24,6 +24,8 @@
 					<a href="computers.html">Shop</a>
 					<a href="about.html">About Us</a>
 					<a href="contact.html">Contact Us</a>
+                    <a href="portfolioOscar.html">Team</a>
+
 				</div>
 			</nav>
 
@@ -50,7 +52,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="portfolioHayden">Hayden</a></li>
                             <li><a href="portfolioSolange">Solange</a></li>
-                            <li><a href="portfolioOscar">Oscar</a></li>
+                            <li><a href="portfolioOscar.html">Oscar</a></li>
                         </ul>
 				    </li>
 			</nav>
