--- a/computers.html
+++ b/computers.html
@@ -22,8 +22,6 @@
 						<a href="computers.html">Shop</a> 
 						<a href="about.html">About Us</a>
 						<a href="contact.html">Contact Us</a>
-						<a href="portfolioOscar.html">Team</a>
-
 					</div>
 					<a class="menu-icon" onclick="hamburger()">
 						<div>&#9776;</div>
@@ -53,7 +51,7 @@
 						<li><a href="portfolioHayden.html">Team</a>
 							<ul class="dropdown-menu">
 								<li><a href="portfolioHayden">Hayden</a></li>
-								<li><a href="portfolioSolange">Solange</a></li>
+								<li><a href="portfolioSolange.html">Solange</a></li>
 								<li><a href="portfolioOscar.html">Oscar</a></li>
 							</ul>
 						</li>
@@ -85,6 +83,8 @@
 			<footer>
 				<p>&copy; Copyright 2021. All Right Reserved.</p>
 				<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
+				<p>Created by:<a href="portfolioSolange.html">Solange</a>&ndash;<a href="portfolioHayden.html">Hayden</a>&ndash; <a href="portfolioOscar.html">Oscar</a></p>
+
 			</footer>
 		</div>
 	</body>
