--- a/About.html
+++ b/About.html
@@ -23,7 +23,6 @@
 					<a href="shop.html">Shop</a>
 					<a href="about.html">About us</a>
 					<a href="Contact Us.html">Contact Us</a>
-                    <a href="portfolioOscar.html">Team</a>
 				</div>
 				<a class="menu-icon" onclick="hamburger()">
 					<div>&#9776;</div>
@@ -53,7 +52,7 @@
                     <li><a href="portfolioHayden.html">Team</a>
                         <ul class="dropdown-menu">
                             <li><a href="portfolioHayden">Hayden</a></li>
-                            <li><a href="portfolioSolange">Solange</a></li>
+                            <li><a href="portfolioSolange.html">Solange</a></li>
                             <li><a href="portfolioOscar.html">Oscar</a></li>
                         </ul>
 				    </li>
@@ -82,6 +81,8 @@
         <footer>
             <p>&copy; Copyright 2021. All Right Reserved.</p>
             <p><a href="mailto:forwardtechnoshop@mail.net">forwardtechnoshop@mail.net</a></p>
+            <p>Created by:<a href="portfolioSolange.html">Solange</a>&ndash;<a href="portfolioHayden.html">Hayden</a>&ndash; <a href="portfolioOscar.html">Oscar</a></p>
+
         </footer>
    
     </div>
