--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,6 @@
 						<a href="computers.html">Shop</a>
 						<a href="about.html">About us</a>
 						<a href="Contact Us.html">Contact Us</a>
-						<a href="portfolioOscar.html">Team</a>
-
 					</div>
 					<a class="menu-icon" onclick="hamburger()">
 						<div>&#9776;</div>
@@ -48,7 +46,7 @@
 						<li><a href="portfolioHayden.html">Team</a>
 							<ul class="dropdown-menu">
 								<li><a href="portfolioHayden">Hayden</a></li>
-								<li><a href="portfolioSolange">Solange</a></li>
+								<li><a href="portfolioSolange.html">Solange</a></li>
 								<li><a href="portfolioOscar.html">Oscar</a></li>
 							</ul>
 						</li>
@@ -103,6 +101,8 @@
 				<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
 				<img src="Images/twitter.png" width="20" height="20">
 				<img src="Images/facebook.webp" width="25" height="25">
+				<p>Created by:<a href="portfolioSolange.html">Solange</a>&ndash;<a href="portfolioHayden.html">Hayden</a>&ndash; <a href="portfolioOscar.html">Oscar</a></p>
+
 			</footer>
 		</div>
 	</body>
