--- a/LearnMoreDell.html
+++ b/LearnMoreDell.html
@@ -24,6 +24,8 @@
 					<a href="computers.html">Shop</a>
 					<a href="about.html">About Us</a>
 					<a href="contact.html">Contact Us</a>
+                    <a href="portfolioOscar.html">Team</a>
+
 				</div>
 			</nav>
 
@@ -62,26 +64,15 @@
             <p>Your one-stop shop for all the latest technology gadgets and gear. Explore our extensive range of high-quality tablets designed to fit every need and budget.</p>
 
             <section id="features">
-                <h2>Featured Tablets</h2>
+                <h2>Featured Laptops</h2>
                 <div class="products">
                     <div class="product">
-                        <img src="Images/produit1.jpeg" alt="Tablet 1" width="250" height="250">
-                        <h3>Pro Tablet Model 1</h3>
-                        <p>Powerful performance in your hands.</p>
-                        <a href="shop.html#tablet1">Learn More</a>
+                        <img src="Images/dell.png" alt="laptop 1" width="300" height="250">
+                        <h3>Dell Latitude 5540 Laptop <br> Start from $949.00 </h3>
+                        <p>"Performance redefined. Yours turn to act."</p>
+                        <a href="LearnMoreDell.html">Learn More</a>
                     </div>
-                    <div class="product">
-                        <img src="Images/produit2.jpeg" alt="Tablet 2" width="250" height="250">
-                        <h3>Pro Tablet Model 2</h3>
-                        <p>Next-generation technology for professionals.</p>
-                        <a href="shop.html#tablet2">Learn More</a>
-                    </div>
-                    <div class="product">
-                        <img src="Images/produit3.jpg" alt="Tablet 3" width="250" height="250">
-                        <h3>Pro Tablet Model 3</h3>
-                        <p>Stunning visuals and superb performance.</p>
-                        <a href="shop.html#tablet3">Learn More</a>
-                    </div>
+                    
                 </div>
             </section>
         </main>
