--- a/portfolioOscar.html
+++ b/portfolioOscar.html
@@ -23,7 +23,6 @@
 					<a href="shop.html">Shop</a>
 					<a href="about.html">About us</a>
 					<a href="Contact Us.html">Contact Us</a>
-                    <a href="portfolioOscar.html">Team</a>
 				</div>
 				<a class="menu-icon" onclick="hamburger()">
 					<div>&#9776;</div>
@@ -53,7 +52,7 @@
                     <li><a href="portfolioHayden.html">Team</a>
                         <ul class="dropdown-menu">
                             <li><a href="portfolioHayden">Hayden</a></li>
-                            <li><a href="portfolioSolange">Solange</a></li>
+                            <li><a href="portfolioSolange.html">Solange</a></li>
                             <li><a href="portfolioOscar.html">Oscar</a></li>
                         </ul>
 				    </li>
