--- a/Tablet.html
+++ b/Tablet.html
@@ -36,12 +36,11 @@
 			<nav class="tablet-desktop">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="computers.html">shop</a>
+					<li><a href="computers.html">Shop</a>
                         <ul class="dropdown-menu">
                             <li><a href="computers.html">Computers</a></li>
                             <li><a href="laptop.html">Laptops</a></li>
                             <li><a href="Tablet.html">Tablet</a></li>
-                            <li><a href="software.html">Software</a></li>
                         </ul>
                     </li>
 					<li><a href="about.html">About us</a></li>
