--- a/portfolioSolange.html
+++ b/portfolioSolange.html
@@ -1,65 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Solange's Portfolio</title>
+    <title>TechnoShop</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="Images/favicon_io/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon_io/apple-touch-icon.png">
+	<link rel="icon" sizes="192x192" href="Images/favicon_io/android-chrome-192x192.png">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span the="icon-bar"></span>
-                    <span the="icon-bar"></span>                        
-                </button>
-                <a class="navbar-brand" href="#">Solange's Portfolio</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="About Us.html">About Us</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
 
-<main>
-    <h2>My Portfolio</h2>
-    <div id="page">
-        <article>
-            <figure>
-                <img src="images/solange.jpg" alt="Picture of Solange" height="250" width="250">
-                <figcaption>Information Architect & Student at SUU</figcaption>
-            </figure>
-            <h2>About Me</h2>
-            <p>My name is Solange, a junior at Southern Utah University (SUU) majoring in Computer Science with a focus on Information Architecture(IA). I am passionate about organizing complex information to improve usability and user experience. My studies and projects involve creating intuitive navigation systems, effective categorization, and ensuring content accessibility, which are critical in helping users find and interact with information efficiently.</p>
-            <p>Through my coursework and hands-on projects, I have developed strong skills in designing and implementing user-centric information structures that facilitate effective communication and interaction across digital platforms.</p>
-        </article>
+    <div id="container">
+
+		<div id="nav">
+			<!-- Mobile Nav -->
+			<nav class="mobile-nav">
+				<div id="menu-links">
+					<a href="index.html">Home</a>
+					<a href="shop.html">Shop</a>
+					<a href="about.html">About us</a>
+					<a href="Contact Us.html">Contact Us</a>
+				</div>
+				<a class="menu-icon" onclick="hamburger()">
+					<div>&#9776;</div>
+				</a>
+			</nav>
+
+			
+			<!-- Use the header area for the website name or logo -->
+			<header id="ffc-logo">
+				<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
+			</header>
+
+			<!-- Tablet, Desktop Nav -->
+			<nav class="tablet-desktop">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="shop.html">Shop</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="computers.html">Computers</a></li>
+                            <li><a href="laptop.html">Laptop</a></li>
+                            <li><a href="Tablet.html">Tablet</a></li>
+                        </ul>
+                    </li>
+					<li><a href="about.html">About us</a></li>
+					<li><a href="Contact Us.html">Contact Us</a></li>
+                    <li><a href="portfolioHayden.html">Team</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="portfolioHayden">Hayden</a></li>
+                            <li><a href="portfolioSolange.html">Solange</a></li>
+                            <li><a href="portfolioOscar.html">Oscar</a></li>
+                        </ul>
+				    </li>
+			</nav>
+		</div>
+		
+        <!-- Use the main area to add the main content of the webpage -->
+        <main>
+            <h1>&nbsp; My PortFolio</h1>
+
+            <section id="slideshow" class="slideshow-container">
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 5</div>
+                    <img src="Images/solange's portolio_pic/Produit1.jpg" style="width: 50%;">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 5</div>
+                    <img src="Images/solange's portolio_pic/produit2.jpg" style="width: 50%;">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 5</div>
+                    <img src="Images/solange's portolio_pic/produit3.jpg" style="width: 50%;">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">4 / 5</div>
+                    <img src="Images/solange's portolio_pic/produit4.jpg" style="width: 50%;">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">5 / 5</div>
+                    <img src="Images/solange's portolio_pic/produit5.jpg" style="width: 50%;">
+                </div>
+
+            </section>
+
+            <div style="text-align: center;">
+                <span class="dot" onclick="currentSlide(1)"></span> 
+                <span class="dot" onclick="currentSlide(2)"></span> 
+                <span class="dot" onclick="currentSlide(3)"></span> 
+                <span class="dot" onclick="currentSlide(4)"></span> 
+                <span class="dot" onclick="currentSlide(5)"></span> 
+
+            </div>
+        
+        </main>
+		
+        <!-- Use the footer area to add webpage footer content -->
+        <footer>
+            <p>&copy; Copyright 2021. All Right Reserved.</p>
+            <p><a href="mailto:forwardtechnoshop@mail.net">forwardtechnoshop@mail.net</a></p>
+            <img src="Images/twitter.png" width="20" height="20">
+		<img src="Images/facebook.webp" width="25" height="25">
+        </footer>
+   
     </div>
-</main>
-<footer>
-    <a href="Solange's Portfolio.html"><p>Designed by Solange Adidi</p></a>
-    <p>&copy; 2024 Solange's Portfolio. All rights reserved.</p>
-    <img src="Images/twitter.png" width="20" height="20">
-	<img src="Images/facebook.webp" width="25" height="25">
 
-</footer>
+    <script src="Script/script.js"></script>
 
 </body>
 </html>
