--- a/portfolioSolange.html
+++ b/portfolioSolange.html
@@ -105,6 +105,7 @@
         <footer>
             <p>&copy; Copyright 2021. All Right Reserved.</p>
             <p><a href="mailto:forwardtechnoshop@mail.net">forwardtechnoshop@mail.net</a></p>
+		<p>Designed by: Solange Adidi</p>
             <img src="Images/twitter.png" width="20" height="20">
 		<img src="Images/facebook.webp" width="25" height="25">
         </footer>
