Fixed computers page, more bug fixes and styling

--- a/Index.html
+++ b/Index.html
@@ -10,24 +10,25 @@
 		<div id="container">
 
 			<div id="nav">
-				<!-- Mobile Nav -->
-				<nav class="mobile-nav">
-					<div id="menu-links">
-						<a href="index.html">Home</a>
-						<a href="computers.html">Shop</a>
-						<a href="about.html">About us</a>
-						<a href="Contact Us.html">Contact Us</a>
-					</div>
-					<a class="menu-icon" onclick="hamburger()">
-						<div>&#9776;</div>
-					</a>
-				</nav>
-
-				
 				<!-- Use the header area for the website name or logo -->
 				<header id="ffc-logo">
 					<a href="Index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
 				</header>
+				
+				<!-- Mobile Nav -->
+				<nav class="mobile-nav">
+					<a class="menu-icon" onclick="hamburger()">
+						<div>&#9776;</div>
+					</a>
+					<div id="menu-links">
+						<a href="index.html">Home</a>
+						<a href="computers.html">Computers</a>
+						<a href="laptop.html">Laptops</a>
+						<a href="Tablet.html">Tablets</a>
+						<a href="about.html">About Us</a>
+						<a href="Contact Us.html">Contact Us</a>
+					</div>
+				</nav>
 
 				<!-- Tablet, Desktop Nav -->
 				<nav class="tablet-desktop">
@@ -36,11 +37,11 @@
 						<li><a href="computers.html">Shop</a>
 							<ul class="dropdown-menu">
 								<li><a href="computers.html">Computers</a></li>
-								<li><a href="laptop.html">Laptop</a></li>
-								<li><a href="Tablet.html">Tablet</a></li>
+								<li><a href="laptop.html">Laptops</a></li>
+								<li><a href="Tablet.html">Tablets</a></li>
 							</ul>
 						</li>
-						<li><a href="about.html">About us</a></li>
+						<li><a href="about.html">About Us</a></li>
 						<li><a href="Contact Us.html">Contact Us</a></li>
 						<li><a href="portfolioHayden.html">Team</a>
 							<ul class="dropdown-menu">
@@ -94,7 +95,7 @@
 				<p><a href="mailto:technoshop@mail.net">technoshop@mail.net</a></p>
 				<img src="Images/twitter.png" width="20" height="20">
 				<img src="Images/facebook.webp" width="25" height="25">
-				<p>Created by:<a href="portfolioSolange.html">Solange</a>&ndash;<a href="portfolioHayden.html">Hayden</a>&ndash; <a href="portfolioOscar.html">Oscar</a></p>
+				<p>Created by: <a href="portfolioSolange.html">Solange</a> &ndash; <a href="portfolioHayden.html">Hayden</a> &ndash; <a href="portfolioOscar.html">Oscar</a></p>
 
 			</footer>
 		</div>
