--- a/Tablet.html
+++ b/Tablet.html
@@ -14,44 +14,46 @@
     <div id="container">
 	
 		<div id="nav">
-			<!-- Mobile Navigation -->
+			<!-- Use the header area for the website name or logo -->
+			<header id="ffc-logo">
+				<a href="Index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
+			</header>
+			
+			<!-- Mobile Nav -->
 			<nav class="mobile-nav">
 				<a class="menu-icon" onclick="hamburger()">
-					<div>&#9776; Menu</div>
+					<div>&#9776;</div>
 				</a>
-				<div id="menu-links" class="menu-hidden">
+				<div id="menu-links">
 					<a href="index.html">Home</a>
-					<a href="computers.html">Shop</a>
+					<a href="computers.html">Computers</a>
+					<a href="laptop.html">Laptops</a>
+					<a href="Tablet.html">Tablets</a>
 					<a href="about.html">About Us</a>
-					<a href="contact.html">Contact Us</a>
+					<a href="Contact Us.html">Contact Us</a>
 				</div>
 			</nav>
 
-			<!-- Header for Website Name or Logo -->
-			<header id="ffc-logo">
-				<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30"></a>
-			</header>
-
-			<!-- Tablet and Desktop Navigation -->
+			<!-- Tablet, Desktop Nav -->
 			<nav class="tablet-desktop">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="computers.html">Shop</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="computers.html">Computers</a></li>
-                            <li><a href="laptop.html">Laptops</a></li>
-                            <li><a href="Tablet.html">Tablet</a></li>
-                        </ul>
-                    </li>
-					<li><a href="about.html">About us</a></li>
+						<ul class="dropdown-menu">
+							<li><a href="computers.html">Computers</a></li>
+							<li><a href="laptop.html">Laptops</a></li>
+							<li><a href="Tablet.html">Tablets</a></li>
+						</ul>
+					</li>
+					<li><a href="about.html">About Us</a></li>
 					<li><a href="Contact Us.html">Contact Us</a></li>
-                    <li><a href="portfolioHayden.html">Team</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="portfolioHayden">Hayden</a></li>
-                            <li><a href="portfolioSolange.html">Solange</a></li>
-                            <li><a href="portfolioOscar.html">Oscar</a></li>
-                        </ul>
-				    </li>
+					<li><a href="portfolioHayden.html">Team</a>
+						<ul class="dropdown-menu">
+							<li><a href="portfolioHayden">Hayden</a></li>
+							<li><a href="portfolioSolange.html">Solange</a></li>
+							<li><a href="portfolioOscar.html">Oscar</a></li>
+						</ul>
+					</li>
 			</nav>
 		</div>
 
