--- a/computers.html
+++ b/computers.html
@@ -15,23 +15,25 @@
 		<div id="container">
 
 			<div id="nav">
+				<!-- Use the header area for the website name or logo -->
+				<header id="ffc-logo">
+					<a href="Index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
+				</header>
+				
 				<!-- Mobile Nav -->
-				 <nav class="mobile-nav">
-					<div id="menu-links">
-						<a href="index.html">Home</a>
-						<a href="computers.html">Shop</a> 
-						<a href="about.html">About Us</a>
-						<a href="contact.html">Contact Us</a>
-					</div>
+				<nav class="mobile-nav">
 					<a class="menu-icon" onclick="hamburger()">
 						<div>&#9776;</div>
 					</a>
+					<div id="menu-links">
+						<a href="index.html">Home</a>
+						<a href="computers.html">Computers</a>
+						<a href="laptop.html">Laptops</a>
+						<a href="Tablet.html">Tablets</a>
+						<a href="about.html">About Us</a>
+						<a href="Contact Us.html">Contact Us</a>
+					</div>
 				</nav>
-				<!-- Use the header area for the website name or logo -->
-				<header id="ffc-logo">
-					<a href="index.html"><img src="Images/Logo technoshop.png" alt="Logo TechnoShop" height="30" ></a>
-
-				</header>
 
 				<!-- Tablet, Desktop Nav -->
 				<nav class="tablet-desktop">
@@ -40,11 +42,11 @@
 						<li><a href="computers.html">Shop</a>
 							<ul class="dropdown-menu">
 								<li><a href="computers.html">Computers</a></li>
-								<li><a href="laptop.html">Laptop</a></li>
-								<li><a href="Tablet.html">Tablet</a></li>
+								<li><a href="laptop.html">Laptops</a></li>
+								<li><a href="Tablet.html">Tablets</a></li>
 							</ul>
 						</li>
-						<li><a href="about.html">About us</a></li>
+						<li><a href="about.html">About Us</a></li>
 						<li><a href="Contact Us.html">Contact Us</a></li>
 						<li><a href="portfolioHayden.html">Team</a>
 							<ul class="dropdown-menu">
@@ -57,12 +59,12 @@
 			</div>
 			
 			<main>
-				<section id="computers">
-					<h3>Desktops</h3>
-					<p>From the minimal setup to the latest gaming rig, we've got you covered.</p>      
-				</section>
+				<div id="computers">
+					<h1>Desktops</h1>
+					<h2>From the minimal setup to the latest gaming rig, we've got you covered.</h2>      
+				</div>
 				
-				<section id="computer-cards">
+				<div id="computer-cards">
 					<div>
 						<img src="Images/hpdesktop.jpg">
 						<p>$129.99</p>
@@ -75,7 +77,7 @@
 						<img src="Images/gamingdesktop.jpg">
 						<p>$1199.99</p>
 					</div>
-				</section>
+				</div>
 			</main>
 			
 			<footer>
@@ -84,5 +86,6 @@
 				<p>Created by:<a href="portfolioSolange.html">Solange</a>&ndash;<a href="portfolioHayden.html">Hayden</a>&ndash; <a href="portfolioOscar.html">Oscar</a></p>
 			</footer>
 		</div>
+		<script src="Script/script.js"></script>
 	</body>
 </html>
