Added in my picture

--- a/portfolioHayden.html
+++ b/portfolioHayden.html
@@ -68,6 +68,7 @@
 				<div class="jumbotron">
 					<h1 class="display-4">Hi! I'm Hayden.</h1>
 					<p class="lead">I am a Cybersecurity student at Southern Utah University.</p>
+					<img src="Images/hayden.png">
 					<hr class="my-4">
 					<p>I have experience as a full stack developer, systems administrator, hacker, and hobbyist.</p>
 					<p class="lead">
