--- a/About.html
+++ b/About.html
@@ -51,7 +51,7 @@
 					<li><a href="Contact Us.html">Contact Us</a></li>
 					<li><a href="portfolioHayden.html">Team</a>
 						<ul class="dropdown-menu">
-							<li><a href="portfolioHayden">Hayden</a></li>
+							<li><a href="portfolioHayden.html">Hayden</a></li>
 							<li><a href="portfolioSolange.html">Solange</a></li>
 							<li><a href="portfolioOscar.html">Oscar</a></li>
 						</ul>
