--- a/Contact Us.html
+++ b/Contact Us.html
@@ -50,7 +50,7 @@
 					<li><a href="Contact Us.html">Contact Us</a></li>
 					<li><a href="portfolioHayden.html">Team</a>
 						<ul class="dropdown-menu">
-							<li><a href="portfolioHayden">Hayden</a></li>
+							<li><a href="portfolioHayden.html">Hayden</a></li>
 							<li><a href="portfolioSolange.html">Solange</a></li>
 							<li><a href="portfolioOscar.html">Oscar</a></li>
 						</ul>
@@ -67,7 +67,7 @@
                 <h4>Email us: <a href="mailto:support@technoshop.com" class="contact-email-link">support@technoshop.com</a></h4>
                 <h4>Visit us at: 123 Tech Street, Silicon Valley, CA</h4>
                
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.652026123742!2d-122.08560868467936!3d37.42206597982466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5b3f1363b4f%3A0x84a7249f762e8374!2s123%20Tech%20St%2C%20Mountain%20View%2C%20CA%2094043%2C%20USA!5e0!3m2!1sen!2sus!4v1580996651850!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" class="map"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.652026123742!2d-122.08560868467936!3d37.42206597982466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5b3f1363b4f%3A0x84a7249f762e8374!2s123%20Tech%20St%2C%20Mountain%20View%2C%20CA%2094043%2C%20USA!5e0!3m2!1sen!2sus!4v1580996651850!5m2!1sen!2sus" width="80%" height="300" allowfullscreen="" class="map"></iframe>
             </section>
             
             <section id="contact-form">
